--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.8"
 
 services:
   app:
-    image: mcr.microsoft.com/devcontainers/php:8.3
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
     volumes:
       - ..:/workspace:cached
     working_dir: /workspace
